added new functions

--- a/src/style/FlatDarkLaf.properties
+++ b/src/style/FlatDarkLaf.properties
@@ -1,6 +1,17 @@
-#TitlePane.unifiedBackground = false
-#TitlePane.buttonSize = 14, 25
-#Button.backgroundColor = #49c427
+TitlePane.unifiedBackground = false
+TitlePane.buttonSize = 15, 35
+Button.background = #49c427
+Button.hoverBackground = darken($Button.background, 20%, derived)
+TextField.background = rgb(93,93,93)
+TextField.focusBackground = lighten($TextField.background, 10%)
+Table.background = #1d2124
+Table.selectionBackground = lighten(#1d2124, 20%)
+Table.selectionForeground = rgb(204, 204, 204)
+
+
+
+
+
 # Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
